# stellar-veritas

./: .gitignore  COPYING  README.md  stellar-veritas.cabal
.github/workflows/: build-binaries.yml  sync-upstream.yml
bundled/Basement/: Base16.hs  Bits.hs  Block.hs  BlockN.hs  Bounded.hs  BoxedArray.hs  Cast.hs  Endianness.hs  Environment.hs  Error.hs  Exception.hs  FinalPtr.hs  Floating.hs  From.hs  Imports.hs  IntegralConv.hs  Monad.hs  MutableBuilder.hs  Nat.hs  NonEmpty.hs  NormalForm.hs  PrimType.hs  Runtime.hs  Show.hs  String.hs  Terminal.hs  These.hs  UArray.hs
bundled/Basement/Alg/: Class.hs  Mutable.hs  PrimArray.hs  String.hs  UTF8.hs  XorShift.hs
bundled/Basement/Bindings/: Memory.hs
bundled/Basement/Block/: Base.hs  Builder.hs  Mutable.hs
bundled/Basement/Compat/: AMP.hs  Base.hs  Bifunctor.hs  CallStack.hs  ExtList.hs  Identity.hs  IsList.hs  MonadTrans.hs  Natural.hs  NumLiteral.hs  PrimTypes.hs  Primitive.hs  Semigroup.hs  Typeable.hs
bundled/Basement/Compat/C/: Types.hs
bundled/Basement/Numerical/: Additive.hs  Conversion.hs  Multiplicative.hs  Number.hs  Subtractive.hs
bundled/Basement/Sized/: Block.hs  List.hs  UVect.hs  Vect.hs
bundled/Basement/String/: Builder.hs  CaseMapping.hs
bundled/Basement/String/Encoding/: ASCII7.hs  Encoding.hs  ISO_8859_1.hs  UTF16.hs  UTF32.hs
bundled/Basement/Terminal/: ANSI.hs
bundled/Basement/Types/: AsciiString.hs  Char7.hs  CharUTF8.hs  OffsetSize.hs  Ptr.hs  Word128.hs  Word256.hs
bundled/Basement/UArray/: Base.hs  Mutable.hs
bundled/Basement/UTF8/: Base.hs  Helper.hs  Table.hs  Types.hs
bundled/Data/: Scientific.hs
bundled/Network/ONCRPC/XDR/: Cabal.hs  Serial.hs
bundled/Network/Stellar/: Keypair.hs  TransactionXdr.hs
bundled/Stellar/: Simple.hs
bundled/Stellar/Simple/: Types.hs
src/: Encryption.hs  Main.hs  Pretty.hs  stellar-veritas.cabal
