cabal-version:       3.0
name:                stellar-veritas
-- semver
version:             0
synopsis:            Stellar transaction signer and pretty-printer
description:         The aim is to create a trustworthy Stellar transaction signer (and, by necessity, a pretty printer) using only Glasgow Haskell compiler code and Haskell Core libraries, reducing the possible supply chain attack surface.
license:             AGPL-3.0-only
license-file:        COPYING
author:              La Ancapo
category:            Network, Stellar
build-type:          Simple
tested-with:         GHC == 9.12.3

Flag support_sse
  Description:       Use SSE optimized version of (BLAKE2, ARGON2)
  Default:           False
  Manual:            True

executable stellar-veritas
  main-is:             Main.hs
  CPP-options:         -DWITH_BYTESTRING_SUPPORT
  ghc-options:         -W -Wcompat -Wno-missing-home-modules -fno-warn-tabs -rtsopts=ignoreAll -optl-Wl,-s
  other-modules:
  build-depends:       base >= 4.9 && < 5,
                       text >= 1.2.4.1 && < 2.2,
                       bytestring ^>= 0.12,
                       directory ^>= 1.3.9.0,
                       vector ^>= 0.13.2.0,
                       time >= 1.14 && < 1.16,
                       containers >= 0.7 && < 0.8,
                       array ^>= 0.5.8.0,
                       binary ^>= 0.8.9.3,
                       deepseq >= 1.5.0.0 && < 1.6,
                       primitive ^>= 0.9.1.0,
                       template-haskell >= 2.22.0.0 && < 2.25,
                       filepath ^>= 1.5.4.0,
                       ghc-prim >= 0.12.0 && < 0.14,
  hs-source-dirs:      src, bundled
  default-language:    Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    ScopedTypeVariables
    Trustworthy
    TypeOperators
    UnliftedFFITypes
  c-sources:          bundled/cbits/ref10/ed25519.c
                      bundled/cbits/argon2/argon2.c
  include-dirs:       bundled/cbits/ref10
                      bundled/cbits/ref10/include
                      bundled/cbits/argon2
  if arch(x86_64) || flag(support_sse)
    C-sources:      bundled/cbits/blake2/sse/blake2s.c
                  , bundled/cbits/blake2/sse/blake2sp.c
                  , bundled/cbits/blake2/sse/blake2b.c
                  , bundled/cbits/blake2/sse/blake2bp.c
    include-dirs: bundled/cbits/blake2/sse
  else
    C-sources:      bundled/cbits/blake2/ref/blake2s-ref.c
                  , bundled/cbits/blake2/ref/blake2sp-ref.c
                  , bundled/cbits/blake2/ref/blake2b-ref.c
                  , bundled/cbits/blake2/ref/blake2bp-ref.c
    include-dirs: bundled/cbits/blake2/ref
  if arch(x86_64) || flag(support_sse)
    CPP-options:    -DSUPPORT_SSE
    if arch(i386)
      CC-options:   -msse2
