cabal-version:       3.0
name:                stellar-veritas
-- semver
version:             0
synopsis:            Stellar transaction  signer and pretty-printer
-- description:
license:             AGPL-3.0-only
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Network, Stellar
build-type:          Simple
tested-with:         GHC == 9.12.3

executable stellar-veritas
  main-is:             Main.hs
  ghc-options:         -W -Wcompat -fno-warn-tabs -g
  other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 5,
                       text >= 1.2.4.1 && < 2.2,
                       bytestring ^>= 0.12,
                       base32 ^>= 0.4,
                       base64-bytestring ^>= 1.2.1.0,
                       directory ^>= 1.3.9.0,
                       vector ^>= 0.13.2.0,
                       stellar-sdk ^>= 0.2,
                       stellar-horizon,
  hs-source-dirs:      .
  default-language:    Haskell2010
