cabal-version:       3.0
name:                stellar-veritas
-- semver
version:             0
synopsis:            Stellar transaction signer and pretty-printer
description:         The aim is to create a trustworthy Stellar transaction signer (and, by necessity, a pretty printer) using only Glasgow Haskell compiler code and Haskell Core libraries, reducing the possible supply chain attack surface.
license:             AGPL-3.0-only
license-file:        COPYING
author:              La Ancapo
category:            Network, Stellar
build-type:          Simple
tested-with:         GHC == 9.12.3

executable stellar-veritas
  main-is:             Main.hs
  ghc-options:         -W -Wcompat -Wno-missing-home-modules -fno-warn-tabs -rtsopts=ignoreAll -optl-Wl,-s
  other-modules:
  build-depends:       base >= 4.9 && < 5,
                       text >= 1.2.4.1 && < 2.2,
                       bytestring ^>= 0.12,
                       base32 ^>= 0.4,
                       base64-bytestring ^>= 1.2.1.0,
                       directory ^>= 1.3.9.0,
                       vector ^>= 0.13.2.0,
                       stellar-sdk ^>= 0.2,
                       stellar-horizon,
  hs-source-dirs:      .
  default-language:    Haskell2010
